# StooqFXDataReader

./: PyStooqFX.py  README.md  setup.cfg
StooqFXDataReader/: __init__.py
StooqFXDataReader/io/: data.py
