[metadata]
name = StooqFXDataReader
version = 0.0.2
url = https://github.com/sawadyrr5/StooqFXDataReader
author = sawady
author_email = riskreturn5@gmail.com
license = file: LICENSE
description = Downloading FX historical data from Stooq.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[options]
install_requires =
    pandas
    pandas_datareader
zip_safe = False
packages = find: